src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithCustomResources/ValidWithCustomResources.php
<?php

namespace Valid\WithCustomResources;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithCustomResources extends PluginBundle
{
}